apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-custom

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx-custom

  template:
    metadata:
      labels:
        app: nginx-custom

    spec:
      containers:
        - name: nginx
          image: nginx

          ports:
            - containerPort: 80

          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html

      volumes:
        - name: html-volume
          configMap:
            name: nginx-html
