apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: k8s.falcoflow.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: nginx-custom

                port:
                  number: 80
